--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test/test.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/edelciomolina/firebase-functions-redirects.git"
   },
-  "author": "",
+  "author": "edelciomolina",
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1",
