--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "firebase-functions-redirects",
   "version": "1.0.2",
   "description": "",
-  "main": "index.js",
+  "main": "./index.js",
   "scripts": {
     "test": "node test/test.js"
   },
