--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "",
   "main": "./index.js",
   "scripts": {
-    "test": "node test/test.js" 
+    "test": "node test/test.js",
+    "release": "np minor ci"
   },
+  "np": {
+    "yarn": true,
+    "yolo": true
+	},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/edelciomolina/firebase-functions-redirects.git"
@@ -16,6 +21,9 @@
     "express": "^4.17.1",
     "node-run-cmd": "^1.0.1",
     "request": "^2.88.0"
+  },
+	"devDependencies": {
+		"np": "*"
   },
   "bugs": {
     "url": "https://github.com/edelciomolina/firebase-functions-redirects/issues"
